--- a/src/main/resources/templates/principal/principal.html
+++ b/src/main/resources/templates/principal/principal.html
@@ -12,8 +12,9 @@
             <nav class="navbar">
                 <a href="/hoteles/main"><button class="nav-btn">Hoteles</button></a>
                 <a href="/cliente/main"><button class="nav-btn">Clientes</button></a>
-                <button class="nav-btn">Proveedores</button>
-                <button class="nav-btn">Reservaciones</button>
+                <a href="/proveedor/main"><button class="nav-btn">Proveedor</button></a>
+                <a href="/suministro/lista"><button class="nav-btn">Suministros</button></a>
+                <a href="/reservacion/main"><button class="nav-btn">Reservaciones</button></a>
             </nav>
         </header>
 
