--- a/src/main/resources/templates/proveedor/main.html
+++ b/src/main/resources/templates/proveedor/main.html
@@ -12,15 +12,15 @@
     <div class="main-container">
         <div class="content">
             <div class="background-image-cliente"></div>
-            <h1 class="titulo">Hoteles Buena Vista</h1>
+            <h1 class="titulo">Hoteles Buena Vista - Proveedores</h1>
             <div class="search-container">
                 <div class="search-bar">
                     <i class="fas fa-search"></i>
                     <input type="text" placeholder="Buscar Cliente">
                 </div>
                 <div class="action-buttons">  
-                    <a href="/cliente/registro"><button class="btn">Agregar Cliente</button></a>
-                    <a href="/cliente/modificar"><button class="btn">Modificar Cliente</button></a>
+                    <a href="/proveedor/registro"><button class="btn">Agregar Proveedor</button></a>
+                    <a href="/proveedor/modificar"><button class="btn">Modificar Proveedor</button></a>
                 </div>
             </div>
         </div>
