--- a/src/main/resources/templates/reservacion/main.html
+++ b/src/main/resources/templates/reservacion/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clientes</title>
+    <title>Hoteles Buena Vista</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="/css/estilo.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -11,16 +11,16 @@
 <body>
     <div class="main-container">
         <div class="content">
-            <div class="background-image-cliente"></div>
-            <h1 class="titulo">Hoteles Buena Vista</h1>
+            <div class="background-image"></div>
+            <h1 class="titulo">Hoteles Buena Vista- Buscar Reservaciones</h1>
             <div class="search-container">
                 <div class="search-bar">
                     <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Buscar Cliente">
+                    <input type="text" placeholder="Identificacion del cliente">
                 </div>
                 <div class="action-buttons">  
-                    <a href="/cliente/registro"><button class="btn">Agregar Cliente</button></a>
-                    <a href="/cliente/modificar"><button class="btn">Modificar Cliente</button></a>
+                    <a href="/reservacion/registro"><button class="btn">Nueva Reservacion</button></a>
+                    <a href="/reservacion/modificar"><button class="btn">Modificar Reservacion</button></a>
                 </div>
             </div>
         </div>
