--- a/src/main/resources/templates/cliente/registro.html
+++ b/src/main/resources/templates/cliente/registro.html
@@ -9,25 +9,25 @@
 <body>
     <div class="container-registro">
         <div class="left-section">
-            <h1>Hoteles Buena Vista</h1>
-            <img src="https://cdn-icons-png.flaticon.com/512/3033/3033247.png" alt="Imagen del Hotel" class="hotel-image">
+            <h1>Clientes Buena Vista</h1>
+            <img src="https://crm.easytrax.com.bd/client/client_registration/new/images/cover-img.png" alt="Imagen registro de clientes" class="hotel-image">
         </div>
         <div class="right-section">
-            <h2>Registro Hotel</h2>
+            <h2>Registro de Clientes</h2>
             <form>
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
                 
-                <label for="province">Provincia:</label>
+                <label for="province">Apellido 1:</label>
                 <input type="text" id="province" name="province" required>
                 
-                <label for="canton">Cantón:</label>
+                <label for="canton">Apellido 2:</label>
                 <input type="text" id="canton" name="canton" required>
                 
-                <label for="district">Distrito:</label>
+                <label for="district">Email</label>
                 <input type="text" id="district" name="district" required>
                 
-                <label for="email">Email:</label>
+                <label for="email">Direccion: </label>
                 <input type="email" id="email" name="email" required>
                 
                 <button type="submit" class="register-button">Registrar</button>
