--- a/src/main/resources/templates/hotel/modificar.html
+++ b/src/main/resources/templates/hotel/modificar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Hotel - Hoteles Buena Vista</title>
+    <title>Modificacion de Hotel - Hoteles Buena Vista</title>
     <link rel="stylesheet" href="/css/estilo.css"> 
 </head>
 <body>
