--- a/src/main/resources/templates/proveedor/registro.html
+++ b/src/main/resources/templates/proveedor/registro.html
@@ -13,20 +13,17 @@
             <img src="https://cdn-icons-png.flaticon.com/512/3033/3033247.png" alt="Imagen del Hotel" class="hotel-image">
         </div>
         <div class="right-section">
-            <h2>Registro Hotel</h2>
+            <h2>Registro Proveedor</h2>
             <form>
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
                 
-                <label for="province">Provincia:</label>
-                <input type="text" id="province" name="province" required>
+                <label for="contact">Contacto</label>
+                <input type="text" id="contact" name="contact" required>
                 
-                <label for="canton">Cantón:</label>
-                <input type="text" id="canton" name="canton" required>
-                
-                <label for="district">Distrito:</label>
-                <input type="text" id="district" name="district" required>
-                
+                <label for="address">Direccion: </label>
+                <input type="text" id="address" name="address" required>
+                         
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
                 
