--- a/src/main/resources/templates/suministro/main.html
+++ b/src/main/resources/templates/suministro/main.html
@@ -10,26 +10,20 @@
     <div class="container-registro">
         <div class="left-section">
             <h1>Hoteles Buena Vista</h1>
-            <img src="https://cdn-icons-png.flaticon.com/512/3033/3033247.png" alt="Imagen del Hotel" class="hotel-image">
+            <img src="https://img.freepik.com/vector-gratis/ilustracion-vector-concepto-abstracto-centro-logistico-centro-logistica-global-almacen-comercial-centro-distribucion-gestion-cadena-suministro-metafora-abstracta-optimizacion-costes-transporte_335657-1791.jpg" alt="Imagen del Hotel" class="hotel-image">
         </div>
         <div class="right-section">
-            <h2>Registro Hotel</h2>
+            <h2>Registro Suministros</h2>
             <form>
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
                 
-                <label for="province">Provincia:</label>
-                <input type="text" id="province" name="province" required>
+                <label for="contact">Proveedor</label>
+                <input type="text" id="contact" name="contact" required>
                 
-                <label for="canton">Cantón:</label>
-                <input type="text" id="canton" name="canton" required>
-                
-                <label for="district">Distrito:</label>
-                <input type="text" id="district" name="district" required>
-                
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                
+                <label for="address">Cantidad: </label>
+                <input type="number" id="address" name="address" required>
+
                 <button type="submit" class="register-button">Registrar</button>
             </form>
         </div>
